Fix sticky header on Safari by calling autoprefixer

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -144,6 +144,7 @@ svg {
         }
     }
     nav {
+        z-index: 99999999999;
         position: fixed;
         top: 2.1em;
         bottom: 0;
